--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+html, body {
+  background-color: gold;
+  height: 100%;
+}
+#root {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 300px;
+}
+
+.form {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  padding: 10px;
+  width: 50%;
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  margin-top: 20px;
+  font-size: 30px;
+}
+
+.prompt {
+  font-size: 28px;
+}
+
+.restart {
+  margin-top: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.invisible {
+  display: none;
+}
+
+.visible {
+  display: inline;
 }
